--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,10 @@ body {
 }
 
 .hero {
-  /* remove or reduce min-height */
-  min-height: 80vh;       /* or min-height: 80vh; */
+  min-height: 80vh;       
   padding: 48px 24px;
   display: flex;
-  align-items: center;    /* centers content vertically */
+  align-items: center;   
   justify-content: center;
 }
 
@@ -162,6 +161,9 @@ nav.navlinks a {
 }
 
 /* === Skills Slider === */
+.skills-section {
+  padding-top: 150px;
+}
 .skills-box {
   display: flex;
   justify-content: center;
@@ -194,11 +196,11 @@ nav.navlinks a {
   width: var(--width);
   height: var(--height);
   position: absolute;
-  display: flex;               /* centers logo */
+  display: flex;              
   justify-content: center;
   align-items: center;
   transition: filter 0.5s;
-  animation: autoRun 20s linear infinite; /* slower */
+  animation: autoRun 20s linear infinite; 
   animation-delay: calc((20s / var(--quantity)) * (var(--position) - 1) - 20s);
 
 }
@@ -207,7 +209,7 @@ nav.navlinks a {
 .slider .list .item img {
   width: 100%;
   height: 100%;
-  object-fit: contain;         /* prevents stretching */
+  object-fit: contain;         
   display: block;
   
 }
@@ -243,8 +245,7 @@ nav.navlinks a {
 /* Projects Section */
 .projects-section {
   text-align: center;
-  padding: 60px 0;
-  margin-top: 80px;
+  padding-top: 80px;
 }
 
 .section-title {
@@ -287,7 +288,7 @@ nav.navlinks a {
   transition: .5s ease;
 }
 
-/* ACTIVE (center) CARD */
+/* ACTIVE CARD */
 .project-card.single.active {
   opacity: 1;
   transform: scale(1);
@@ -302,7 +303,7 @@ nav.navlinks a {
   z-index: 2;
 }
 
-/* Project image */
+
 .project-card.single img {
   width: 100%;
   height: 350px;
