Last laptop save.

--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ nav.navlinks a {
   gap: 36px;
   align-items: start;
   padding: 0 20px;
+  margin-bottom: 200px;
 }
 
 .about-left .section-title {
