--- a/styles.css
+++ b/styles.css
@@ -809,8 +809,6 @@ section {
 }
 /* ================= RESPONSIVENESS Section ================= */
 
-/* ================= RESPONSIVENESS Section ================= */
-
 /* ---------- Large tablets & small laptops ---------- */
 @media (max-width: 1200px) {
   .hero-container,
@@ -889,6 +887,9 @@ section {
   .leadership-carousel {
     max-width: 420px;
     width: 100%;
+
+    transform: scale(0.9);
+    transform-origin: center top;
   }
 
   .skills-grid {
@@ -933,6 +934,8 @@ section {
 
   .leadership-carousel {
     padding: 10px;
+    transform: scale(0.8);
+    transform-origin: center top;
   }
 
   .car-slide img {
@@ -948,5 +951,11 @@ section {
 @media (max-width: 400px) {
   .contact-icons {
     gap: 28px;
+  }
+
+  .leadership-carousel {
+    padding: 10px;
+    transform: scale(0.7);
+    transform-origin: center top;
   }
 }
