--- a/styles.css
+++ b/styles.css
@@ -825,6 +825,7 @@ section {
     padding-bottom: 48px;
     padding-left: 0;
     padding-right: 0;
+    width: auto;
   }
   body {
     overflow-x: hidden;
