--- a/styles.css
+++ b/styles.css
@@ -975,6 +975,10 @@ section {
     margin-left: auto;
     margin-right: auto;
   }
+  .projects-section {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* ---------- Small phones ---------- */
